// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ClutchParser should parse statement constant  1`] = `
"VariableDeclarationStatement:
  Name: a
  Assign:
    SimpleName: b
"
`;

exports[`ClutchParser should parse statement return  1`] = `
"ReturnStatement:
"
`;

exports[`ClutchParser should parse statement return with a parenthesized expression 1`] = `
"ReturnStatement:
  Return:
    GroupExpression:
      Expression:
        SimpleName: a
"
`;

exports[`ClutchParser should parse statement return with an expression 1`] = `
"ReturnStatement:
  Return:
    SimpleName: a
"
`;

exports[`ClutchParser should parse statement variable  1`] = `
"VariableDeclarationStatement:
  Name: a
  Assign:
    SimpleName: b
"
`;
